# Haskell-Crafting-Interpreters

./: CHANGELOG.md  Haskell-Crafting-Interpreters.cabal  README.md
app/: Expression.hs  Main.hs  Parsers.hs  Tokens.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.10.3/: Haskell-Crafting-Interpreters-0.1.0.0-inplace.conf  package.cache
tests/: ParserTest.hs
