cabal-version:   3.0
name:            Haskell-Crafting-Interpreters
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
maintainer:      fkrausear@gmail.com
author:          fkrause98
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        Parsers
        Tokens
        Expression

    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base ^>=4.20.2.0,
        megaparsec ^>=9.7.0

executable Haskell-Crafting-Interpreters
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base ^>=4.20.2.0,
        megaparsec ^>=9.7.0,
        Haskell-Crafting-Interpreters,
        readline ^>=1.0.3.0

test-suite parser-tests
    type:             exitcode-stdio-1.0
    main-is:          ParserTest.hs
    hs-source-dirs:   tests
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base ^>=4.20.2.0,
        megaparsec ^>=9.7.0,
        Haskell-Crafting-Interpreters,
        hspec
